<resources>
    <string name="app_name">Scoreboard App</string>
    <string name="title_name">Scoreboard App</string>
    <string name="win_team">Winning Team</string>
    <string name="add_one">Add +1</string>
    <string name="add_two">Add +2</string>
    <string name="add_three">Add +3</string>
    <string name="email">Email Id -</string>
    <string name="password">Password -</string>
    <string name="description">-----SCOREBOARD APP-----</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="state">

    </string>
    <string name="position">

    </string>

    <string-array name="state">
        <item>Choose State...</item>
        <item>Tamil Nadu</item>
        <item>Kerela</item>
        <item>Andhra</item>
        <item>Delhi</item>
        <item>Goa</item>
    </string-array>
    <string-array name="position">
        <item>Select one..</item>
        <item>Student</item>
        <item>Teacher</item>
        <item>Parent</item>

    </string-array>
</resources>


